--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title:            Squares and cubes
+title:            Pixels, squares, cubes...
 tagline:          A short tagline
 description:      Not much Legos in there, but some other building blocks...
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://localhost:4000
+url:              http://emmanueldurand.net
 
 # Owner/author information
 owner:
   name:           Emmanuel Durand
   avatar:         bio-photo.jpg
-  bio:            "Uses his keyboard to develop computer graphics-related projects. Also, does some science."
+  bio:            "Keyboard user coding computer graphics-related projects. Also, does some science."
   email:          emmanueldurand@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:        treyBucheman 
@@ -32,8 +32,8 @@ bing_verify:
 links:
   - title: About
     url: /about
-  - title: Articles
-    url: /articles
+  - title: Posts
+    url: /posts
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Canada/Montreal
