--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title:            Pixels, squares, cubes...
 tagline:          A short tagline
 description:      Not much Legos in there, but some other building blocks...
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://emmanueldurand.net
+#url:              http://emmanueldurand.net
+url:
 
 # Owner/author information
 owner:
@@ -34,8 +35,8 @@ links:
     url: /about
   - title: Posts
     url: /posts
-  #- title: Projects
-  #  url: /projects
+  - title: Projects
+    url: /projects
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Canada/Montreal
