--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Pixels, squares, cubes...
 tagline:          A short tagline
 description:      Not much Legos in there, but some other building blocks...
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://emmanueldurand.net
+url:              https://emmanueldurand.net
 
 # Owner/author information
 owner:
