--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ links:
     url: /about
   - title: Posts
     url: /posts
-  - title: Projects
-    url: /projects
+  - title: Realizations
+    url: /realizations
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Canada/Montreal
