--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -9,3 +9,9 @@
   publication: Leonardo
   date: "August 2014"
   link: http://www.mitpressjournals.org/doi/abs/10.1162/LEON_a_00842
+
+- authors: "E. Durand, F. Mérienne, J. Roger, C. Père"
+  title: "Une implémentation de la réalité augmentée pour le patrimoine"
+  publication: "Confere"
+  date: "2012"
+  link:
