--- a/_data/works.yml
+++ b/_data/works.yml
@@ -1,6 +1,6 @@
-- name: name
-  image: works/texture-subway.jpg
-  image-credit: somebody
-  image-credit-link:
-  description: this is a description
-  link: http://emmanueldurand.net
+- name: "Turcot, la route devenue architecture"
+  image: works/turcot.jpg
+  image-credit: Bérengère Marin-Dubuard
+  image-credit-link: http://www.beewoo.net/
+  description: "An interactive installation for the fulldome of the SAT, where the user can navigate throughout the gigantic Turcot interchange. A wooden mockup of the freeway is used as an input device for the user to select its position in the virtual representation being projected on the dome. For this project, I was in charge of the tangible interface using computer vision."
+  link: http://www.beewoo.net/index.php/projects/turcot/
