--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:            Pixels, squares, cubes...
 tagline:          A short tagline
 description:      Not much Legos in there, but some other building blocks...
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-#url:              http://emmanueldurand.net
-url:
+url:              https://emmanueldurand.net
+#url:
 
 # Owner/author information
 owner:
@@ -23,7 +23,7 @@ owner:
   google_plus:    
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
+google_analytics: UA-54335122-1  
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:        
