--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:            Pixels, squares, cubes...
 tagline:          A short tagline
 description:      Not much Legos in there, but some other building blocks...
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              https://emmanueldurand.net
-#url:
+#url:              https://emmanueldurand.net
+url:
 
 # Owner/author information
 owner:
