--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -10,6 +10,11 @@
   date: "August 2014"
   link: http://www.mitpressjournals.org/doi/abs/10.1162/LEON_a_00842
 
+- authors: "E. Durand"
+  title: "Etudes de méthodes et outils pour la cohérence visuelle en réalité mixte appliquée au patrimoine"
+  date: "November 2013"
+  link: http://pastel.archives-ouvertes.fr/pastel-00996513
+
 - authors: "E. Durand, F. Mérienne, J. Roger, C. Père"
   title: "Une implémentation de la réalité augmentée pour le patrimoine"
   publication: "Confere"
