--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            pixels, squares, cubes...
+title:            ~
 tagline:          A short tagline
 description:      Loves Legos in there, but some other building blocks...
 # Your site's domain goes here. Leave localhost server or blank when working locally.
