Fixed pagination issue

--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -2,7 +2,7 @@
   title: "Rendering of Heterogeneous Spatial Audio Scenes"
   publication: "Proceedings of the Linux Audio Conference"
   date: "March 2019"
-  link:
+  link: https://emmanueldurand.net
 
 - authors: "Julien Puget and Mylène Pardoen and Nicolas Bouillot and Emmanuel Durand and Michał Seta and Pascal Bastien"
   title: "Rapid Prototyping of Immersive Video for Popularization of Historical Knowledge"
